--- a/source/styles/blocks/compare-slider.scss
+++ b/source/styles/blocks/compare-slider.scss
@@ -41,6 +41,10 @@
     background-image: linear-gradient($basic-white 150px, #eaeaea 150px, #eaeaea 100%);
   }
 
+  @media (min-width: $desktop) {
+    background-image: linear-gradient($basic-white 135px, $basic-grey 135px, $basic-grey 100%);
+  }
+
   &--before {
     z-index: 5;
 
