--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -1,3 +1,9 @@
+.main-footer__inner {
+  @media (min-width: $desktop) {
+    position: relative;
+  }
+}
+
 .main-footer__contacts {
   padding: 26px 20px;
 
@@ -5,8 +11,22 @@
   justify-content: space-between;
   gap: 15px;
 
+  background-color: $basic-white;
+
   @media (min-width: $tablet) {
     padding: 62px 70px 61px;
+  }
+
+  @media (min-width: $desktop) {
+    position: absolute;
+    z-index: 10;
+
+    top: calc(22% + 7px);
+    left: calc(50% - 610px);
+
+    gap: 70px;
+
+    padding: 61px 55px 60px 80px;
   }
 
   &--grey {
@@ -38,11 +58,19 @@
 
     max-width: 180px;
   }
+
+  @media (min-width: $desktop) {
+    text-align: left;
+  }
 }
 
 .main-footer__info {
   background-color: $basic-grey;
 
+  margin: 0 auto;
+}
+
+.main-footer__info-wrapper {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -58,6 +86,12 @@
     gap: unset;
 
     padding: 56px 30px;
+  }
+
+  @media (min-width: $desktop) {
+    padding: 67px 0;
+
+    max-width: $max-desktop;
   }
 }
 
