--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,5 +1,8 @@
 .main-nav {
   width: 100%;
+
+  display: flex;
+  justify-content: end;
 }
 
 .main-nav__toggle {
@@ -51,7 +54,18 @@
 
     width: unset;
 
+    background-color: unset;
+
     padding-right: 4px;
+  }
+
+  @media (min-width: $desktop) {
+    position: relative;
+
+    top: 0;
+    left: 0;
+
+    max-width: 570px;
   }
 
   &--opened {
@@ -65,4 +79,3 @@
 
   top: 0;
 }
-
