--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -31,6 +31,10 @@
 
   &--grey {
     background-color: $basic-grey;
+
+    @media (min-width: $desktop) {
+      background-color: $basic-white;
+    }
   }
 }
 
