--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -63,6 +63,32 @@
   left: 0;
   top: 13px;
 
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+
+  &:focus-visible {
+    outline: none;
+
+    &::after {
+      content: "";
+      position: absolute;
+
+      top: -2px;
+      left: -5px;
+      right: -5px;
+      bottom: -2px;
+
+      border: 2px solid $basic-black;
+
+      z-index: 10;
+    }
+  }
+
   @media (min-width: $tablet) {
     top: 25px;
   }
