--- a/source/styles/blocks/site-list.scss
+++ b/source/styles/blocks/site-list.scss
@@ -53,6 +53,19 @@
   display: block;
   padding: 22px 20px 24px;
 
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  &:focus-visible {
+    outline: 2px solid $basic-black;
+    outline-offset: 2px;
+  }
+
   &::after {
     content: "";
     position: absolute;
@@ -99,6 +112,14 @@
 
       left: 0;
       bottom: 0;
+    }
+
+    &:hover {
+      opacity: 1;
+    }
+
+    &:active {
+      opacity: 1;
     }
   }
 }
