--- a/source/styles/blocks/socials.scss
+++ b/source/styles/blocks/socials.scss
@@ -15,11 +15,14 @@
   height: 22px;
 
   /* Поменять background на mask */
-  background-repeat: no-repeat;
-  background-size: 28px 22px;
+  mask-repeat: no-repeat;
+  mask-size: 28px 22px;
   background-color: #666666;
 
-  &:hover {
+  position: relative;
+
+  &:hover,
+  &:focus-visible {
     background-color: $basic-green;
   }
 
