--- a/source/styles/blocks/compare-slider.scss
+++ b/source/styles/blocks/compare-slider.scss
@@ -154,6 +154,11 @@
       background-color: rgba(94, 170, 47, 0.6);
     }
   }
+
+  &:focus-visible {
+    outline: 2px solid $basic-black;
+    outline-offset: 20px;
+  }
 }
 
 .compare-slider--before .compare-slider__toggle {
