--- a/source/styles/blocks/html-academy.scss
+++ b/source/styles/blocks/html-academy.scss
@@ -11,6 +11,14 @@
 
   @media (min-width: $tablet) {
     gap: 23px;
+
+    &:hover .html-academy__link {
+      background-color: $basic-green;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
   }
 }
 
@@ -28,6 +36,10 @@
 
   mask-image: url("../../images/icons/stack.svg#logo-html");
   background-color: #666666;
-  background-repeat: no-repeat;
-  background-size: 27px 34px;
+  mask-repeat: no-repeat;
+  mask-size: 27px 34px;
+
+  &:focus-visible {
+    background-color: $basic-green;
+  }
 }
