--- a/source/styles/blocks/map.scss
+++ b/source/styles/blocks/map.scss
@@ -10,6 +10,10 @@
   width: 100%;
   height: 362px;
 
+  &:focus-visible {
+    outline: 2px solid $basic-black;
+  }
+
   @media (min-width: $tablet) {
     height: 400px;
   }
@@ -38,6 +42,10 @@
   height: 362px;
 
   border: none;
+
+  &:focus-visible {
+    outline: 2px solid $basic-black;
+  }
 
   @media (min-width: $tablet) {
     height: 400px;
