--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -226,6 +226,25 @@
   background-position: center right -2px;
   background-size: 34px auto;
 
+  transition: padding-right 0.3s;
+
+  &:hover {
+    padding-right: 49px;
+
+    background-image: url("../../images/icons/stack.svg#icon-arrow-long");
+    background-size: 34px auto;
+    background-position: center right -4px;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  &:focus-visible {
+    outline: 2px solid $basic-black;
+    outline-offset: 2px;
+  }
+
   @media (min-width: $tablet) {
     font-size: 20px;
     line-height: 30px;
@@ -234,5 +253,11 @@
     padding-right: 56px;
 
     background-size: 32px auto;
+
+    &:hover {
+      padding-right: 61px;
+
+      background-position: center right 1px;
+    }
   }
 }
