--- a/source/styles/blocks/form/check-group.scss
+++ b/source/styles/blocks/form/check-group.scss
@@ -20,7 +20,17 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 31px 60px;
 
-    margin-bottom: 51px;
+    margin: 0 40px 53px;
+  }
+
+  @media (min-width: $desktop) {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 31px 82px;
+
+    margin: 0 auto 59px;
+
+    max-width: $max-desktop;
   }
 }
 
