--- a/source/styles/blocks/catalog/extra.scss
+++ b/source/styles/blocks/catalog/extra.scss
@@ -1,10 +1,25 @@
+.extra-gift-wrapper {
+  @media (min-width: $desktop) {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 80px;
+
+    margin: 0 auto;
+    max-width: $max-desktop;
+  }
+}
+
 .extra__title {
   line-height: 24px;
 
-  margin-bottom: 33px;
+  margin: 0 0 33px;
 
   @media (min-width: $tablet) {
-    margin-bottom: 80px;
+    margin: 0 0 80px;
+  }
+
+  @media (min-width: $desktop) {
+    margin: 0 0 79px;
   }
 }
 
@@ -25,6 +40,10 @@
 
   @media (min-width: $tablet) {
     margin: 0 0 69px;
+  }
+
+  @media (min-width: $desktop) {
+    flex-grow: 1;
   }
 }
 
@@ -57,6 +76,16 @@
       left: 0;
     }
   }
+
+  @media (min-width: $desktop) {
+    padding: 16px 0 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    border-left: none;
+    border-right: none;
+  }
 }
 
 .extra__item-inner {
@@ -65,6 +94,10 @@
     justify-content: space-between;
 
     margin: 0 0 12px;
+  }
+
+  @media (min-width: $desktop) {
+    margin: 0;
   }
 }
 
@@ -82,6 +115,12 @@
     font-size: 20px;
     line-height: 20px;
   }
+
+  @media (min-width: $desktop) {
+    margin: 0 86px 0 0;
+    max-width: 240px;
+    width: 240px;
+  }
 }
 
 .extra__text {
@@ -93,6 +132,10 @@
   @media (min-width: $tablet) {
     margin: 3px 0 0;
   }
+
+  @media (min-width: $desktop) {
+    margin: 0;
+  }
 }
 
 .extra__description {
@@ -102,6 +145,15 @@
     line-height: 20px;
 
     margin: 0 33px 0 0;
+  }
+
+  @media (min-width: $desktop) {
+    display: block;
+
+    width: 170px;
+    max-width: 170px;
+
+    margin: 0 73px 0 0;
   }
 }
 
@@ -114,6 +166,10 @@
 
     width: 60px;
   }
+
+  @media (min-width: $desktop) {
+    text-align: left;
+  }
 }
 
 .extra__button {
@@ -122,5 +178,9 @@
   @media (min-width: $tablet) {
     font-size: 16px;
     line-height: 20px;
+  }
+
+  @media (min-width: $desktop) {
+    max-width: 244px;
   }
 }
