--- a/source/styles/blocks/catalog/gift.scss
+++ b/source/styles/blocks/catalog/gift.scss
@@ -9,16 +9,16 @@
 
   box-sizing: border-box;
 
-  padding: 186px 61px 43px 58px;
+  padding: 187px 61px 44px 58px;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("./images/icons/stack.svg#icon-gift"), url("./images/gift-mobile@2x.jpg");
+    background-image: url("../../../images/icons/stack.svg#icon-gift"), url("../../../images/gift-mobile@2x.jpg");
   }
 
   @media (min-width: $tablet) {
     min-height: 200px;
 
-    background-image: url("/images/icons/stack.svg#icon-gift"), url("/images/gift-tablet@1x.jpg");
+    background-image: url("../../../images/icons/stack.svg#icon-gift"), url("../../../images/gift-tablet@1x.jpg");
     background-size: 80px 82px, contain;
     background-position: top calc(50% - 3px) left calc(50% - 236px), center;
 
@@ -28,7 +28,22 @@
   }
 
   @media (min-width: $tablet) and (min-resolution: 2dppx) {
-    background-image: url("./images/icons/stack.svg#icon-gift"), url("./images/gift-tablet@2x.jpg");
+    background-image: url("../../../images/icons/stack.svg#icon-gift"), url("../../../images/gift-tablet@2x.jpg");
+  }
+
+  @media (min-width: $desktop) {
+    max-width: 245px;
+    max-height: 288px;
+
+    background-image: url("../../../images/icons/stack.svg#icon-gift"), url("../../../images/gift-desktop@1x.jpg");
+    background-position: top 58px center, center;
+
+    display: block;
+    padding: 185px 42px 43px;
+  }
+
+  @media (min-width: $desktop) and (min-resolution: 2dppx) {
+    background-image: url("../../../images/icons/stack.svg#icon-gift"), url("../../../images/gift-desktop@2x.jpg");
   }
 }
 
@@ -48,5 +63,11 @@
     text-align: left;
 
     margin: 0 0 0 102px;
+  }
+
+  @media (min-width: $desktop) {
+    text-align: center;
+    
+    margin: 0;
   }
 }
