--- a/source/styles/blocks/catalog/main-catalog.scss
+++ b/source/styles/blocks/catalog/main-catalog.scss
@@ -1,10 +1,12 @@
 .main-catalog__wrapper {
-  padding: 27px 0 0;
-  margin: 0 0 35px;
+  padding: 27px 0 35px;
 
   @media (min-width: $tablet) {
-    padding: 65px 0 0;
-    margin: 0 0 74px;
+    padding: 65px 0 75px;
+  }
+
+  @media (min-width: $desktop) {
+    padding: 77px 0 18px;
   }
 }
 
@@ -13,5 +15,10 @@
 
   @media (min-width: $tablet) {
     margin: 0 30px 85px;
+  }
+
+  @media (min-width: $desktop) {
+    margin: 0 auto 83px;
+    max-width: $max-desktop;
   }
 }
