--- a/source/styles/blocks/catalog/catalog.scss
+++ b/source/styles/blocks/catalog/catalog.scss
@@ -71,8 +71,36 @@
   }
 }
 
+.catalog__link {
+  text-decoration: none;
+  display: block;
+
+  &:hover .catalog__title {
+    opacity: 0.6;
+  }
+
+  &:active .catalog__title {
+    opacity: 0.3;
+  }
+
+  &:focus-visible {
+    outline: 2px solid $basic-black;
+  }
+
+  &:hover .catalog__image,
+  &:focus-visible .catalog__image {
+    transform: scale(1.1);
+  }
+
+  &:active .catalog__image {
+    opacity: 0.7;
+  }
+}
+
 .catalog__image {
   display: block;
+
+  transition: transform 0.3s;
 
   @media (min-width: $tablet) {
     margin: 0 auto 22px;
