--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -1,6 +1,7 @@
 .main-footer__inner {
   @media (min-width: $desktop) {
     position: relative;
+    padding: 95px 0 106px;
   }
 }
 
@@ -18,13 +19,14 @@
   }
 
   @media (min-width: $desktop) {
-    position: absolute;
-    z-index: 10;
+    position: relative;
+    z-index: 5;
 
-    top: calc(22% + 7px);
     left: calc(50% - 610px);
 
     gap: 70px;
+
+    width: 565px;
 
     padding: 61px 55px 60px 80px;
   }
@@ -66,6 +68,11 @@
   @media (min-width: $desktop) {
     text-align: left;
   }
+}
+
+.main-footer__map {
+  top: 0;
+  left: 0;
 }
 
 .main-footer__info {
