--- a/source/styles/blocks/form/contacts-group.scss
+++ b/source/styles/blocks/form/contacts-group.scss
@@ -23,7 +23,7 @@
   @media (min-width: $desktop) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 80px;
+    gap: 20px 80px;
 
     margin: 0 auto;
     max-width: $max-desktop;
