--- a/source/styles/blocks/form/main-form.scss
+++ b/source/styles/blocks/form/main-form.scss
@@ -47,7 +47,7 @@
   @media (min-width: $desktop) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 80px;
+    gap: 40px 80px;
 
     margin: 0 auto 69px;
 
