--- a/source/styles/components/radio.scss
+++ b/source/styles/components/radio.scss
@@ -7,11 +7,18 @@
   @media (min-width: $tablet) {
     gap: 19px;
   }
+
+  &--disabled {
+    opacity: 0.3;
+    
+    pointer-events: none;
+  }
 }
 
 .radio__label {
   font-size: 16px;
   text-transform: uppercase;
+  color: #222222;
 
   padding: 9px 0 0 0;
 
@@ -48,6 +55,7 @@
   background-color: transparent;
 
   appearance: none;
+  cursor: pointer;
 
   position: relative;
 
@@ -63,6 +71,10 @@
 
     border-radius: 50%;
     background-color: $basic-green;
+  }
+
+  &:hover {
+    border-color: #bababa;
   }
 
   @media (min-width: $tablet) {
