--- a/source/styles/components/input-text.scss
+++ b/source/styles/components/input-text.scss
@@ -51,3 +51,12 @@
     box-shadow: 0 0 0 1px $status-error;
   }
 }
+
+.input-text__input[type="number"] {
+  appearance: none;
+}
+
+.input-text__input[type="number"]::-webkit-outer-spin-button,
+.input-text__input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
