--- a/source/styles/components/input-text.scss
+++ b/source/styles/components/input-text.scss
@@ -64,3 +64,12 @@
 .input-text__input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
+
+.input-text__input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+.input-text__input[type="number"]:hover,
+.input-text__input[type="number"]:focus {
+  -moz-appearance: number-input;
+}
