--- a/source/styles/components/input-tel.scss
+++ b/source/styles/components/input-tel.scss
@@ -23,6 +23,12 @@
 .input-tel__input {
   padding: 13px 40px 12px 14px;
 
+  height: 45px;
+  width: 140px;
+
+  box-sizing: border-box;
+
+
   font-family: inherit;
   font-size: 16px;
   line-height: 18px;
@@ -53,6 +59,8 @@
 
   @media (min-width: $tablet) {
     padding: 10px 45px 10px 21px;
+
+    height: 52px;
 
     font-size: 20px;
     line-height: 30px;
