--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -41,7 +41,7 @@
 }
 
 .main-footer__text {
-  color: lighten($basic-black, 6.5%);
+  color: #111111;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
