--- a/source/styles/blocks/logo-text.scss
+++ b/source/styles/blocks/logo-text.scss
@@ -6,7 +6,7 @@
 
   &:hover,
   &:focus-visible {
-    color: #3E3E3E;
+    color: #3e3e3e;
   }
 
   &:focus-visible {
@@ -14,6 +14,6 @@
   }
 
   &:active {
-    color: #6B6B6B;
+    color: #6b6b6b;
   }
 }
