--- a/source/styles/components/input-text.scss
+++ b/source/styles/components/input-text.scss
@@ -63,20 +63,8 @@
   }
 }
 
-.input-text__input[type="number"] {
-  appearance: none;
-}
-
-.input-text__input[type="number"]::-webkit-outer-spin-button,
-.input-text__input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
-
-.input-text__input[type="number"] {
-  -moz-appearance: textfield;
-}
-
+.input-text__input[type="number"],
 .input-text__input[type="number"]:hover,
-.input-text__input[type="number"]:focus {
-  -moz-appearance: number-input;
+.input-text__input[type="number"]:focus-visible {
+  appearance: none;
 }
